@@ -1,3 +1,8 @@
+2005-05-13  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): Fix
+	misplaced goto.
+	
 2005-05-12  Carl Worth  <cworth@cworth.org>
 
 	* src/cairoint.h:
